--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,13 @@ header {
 main {
 	margin: 0 60px;
 
+	img {
+		width: 100%;
+		border-radius: 40px;
+		box-shadow: rgba($color: #000000, $alpha: 0.25) 0 0 20px 5px;
+		margin: 30px 0;
+	}
+
 	&#is404 {
 		display: flex;
 		flex-direction: column;
