--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,11 +34,68 @@ header {
 main {
 	margin: 0 60px;
 
-	img {
-		width: 100%;
-		border-radius: 40px;
-		box-shadow: rgba($color: #000000, $alpha: 0.25) 0 0 20px 5px;
-		margin: 30px 0;
+	section {
+		margin: 20px 0 10px;
+
+		div {
+			display: flex;
+			justify-content: center;
+		}
+
+		h2 {
+			margin-bottom: 10px;
+		}
+	}
+
+	.banner {
+		img {
+			width: 100%;
+			border-radius: 40px;
+			box-shadow: rgba($color: #000000, $alpha: 0.25) 0 0 20px 5px;
+			margin: 30px 0;
+		}
+	}
+
+	.artist {
+		width: fit-content;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 150px;
+		text-decoration: none;
+
+		div {
+			width: 150px;
+			height: 150px;
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+			border-radius: 50%;
+			transition: transform 0.3s ease;
+		}
+
+		&:hover {
+			div {
+				transform: scale(1.05);
+			}
+		}
+		
+		p {
+			font-size: 1.1rem;
+			margin-top: 10px;
+		}
+
+		&:not(:first-child):not(:last-child) {
+			margin: 0 10px 0;
+		}
+
+		&:first-child {
+			margin-right: 10px;
+		}
+
+		&:last-child {
+			margin-left: 10px;
+		}
 	}
 
 	&#is404 {
