--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -165,6 +165,21 @@ main {
 			font-size: 2rem;
 		}
 	}
+
+	&#page {
+		margin-top: 20px;
+		margin-bottom: 50px;
+		line-height: 1.5rem;
+
+		li {
+			margin-left: 20px;
+		}
+
+		h1, h2, h3, h4, h5, h6 {
+			margin-bottom: 10px;
+			margin-top: 25px;
+		}
+	}
 }
 
 footer {
