--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -1,94 +1,159 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	background-color: #232329;
-	display: flex;
-	font-family: Arial, sans-serif;
+  background-color: #232329;
+  display: flex;
+  font-family: Arial, sans-serif;
 }
 
 main {
-	margin-left: 70px;
-	color: white;
+  margin-left: 70px;
+  color: white;
+
+  &.media {
+    form {
+      display: flex;
+      flex-direction: column;
+      margin: 10px;
+
+      label {
+        font-size: 1.3rem;
+      }
+
+      input {
+        width: fit-content;
+        margin-top: 5px;
+      }
+
+      input[type="submit"] {
+        background: #32b28a;
+        border: none;
+        padding: 5px 7px;
+        margin-top: 10px;
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+
+        transition: background 0.2s;
+
+        &:hover {
+          background: #179b80;
+        }
+      }
+    }
+
+    .content {
+      display: flex;
+      flex-wrap: wrap;
+
+      justify-content: center;
+
+      section {
+        height: fit-content;
+        margin-bottom: 20px;
+        margin: 10px;
+        background: #2c2e35;
+        padding: 10px;
+        border-radius: 5px;
+
+        img {
+          width: 300px;
+        }
+
+        p {
+          margin: 5px 0;
+        }
+
+        button {
+          background: rgb(182, 67, 67);
+          color: white;
+          border: none;
+          padding: 4px 7px;
+          border-radius: 5px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
 
 .sidebar {
-	width: 200px;
-	background: #2c2e35;
-	box-shadow: #11181f81 0 0 20px 10px;
-	height: 100vh;
-	overflow: hidden;
-	transition: width 0.2s, box-shadow 0.2s;
-	position: absolute;
+  width: 200px;
+  background: #2c2e35;
+  box-shadow: #11181f81 0 0 20px 10px;
+  height: 100vh;
+  overflow: hidden;
+  transition: width 0.2s, box-shadow 0.2s;
+  position: fixed;
 
-	.toggle-btn {
-		display: flex;
-		justify-content: center;
-		background: #179b80;
-		padding: 10px;
-		user-select: none;
-		cursor: pointer;
-		transition: background 0.2s;
+  .toggle-btn {
+    display: flex;
+    justify-content: center;
+    background: #179b80;
+    padding: 10px;
+    user-select: none;
+    cursor: pointer;
+    transition: background 0.2s;
 
-		&:hover {
-			background: #1bb496;
-		}
-	}
+    &:hover {
+      background: #1bb496;
+    }
+  }
 
-	ul {
-		list-style: none;
+  ul {
+    list-style: none;
 
-		li {
-			.active {
-				background: #32b28a !important;
-			}
+    li {
+      .active {
+        background: #32b28a !important;
+      }
 
-			a {
-				cursor: pointer;
-				padding: 10px 0;
-				display: flex;
-				align-items: center;
-				color: white;
-				text-decoration: none;
-				font-size: 1.2rem;
+      a {
+        cursor: pointer;
+        padding: 10px 0;
+        display: flex;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        font-size: 1.2rem;
 
-				transition: 0.15s background;
-	
-				&:hover {
-					background: #25262c;
-				}
+        transition: 0.15s background;
 
-				ion-icon {
-					font-size: 1.5rem;
-					width: 60px;
-					flex-shrink: 0;
-				}
+        &:hover {
+          background: #25262c;
+        }
 
-				span {
-					opacity: 1;
-					transition: opacity 0.3s ease;
-				}
-			}
-		}
-	}
+        ion-icon {
+          font-size: 1.5rem;
+          width: 60px;
+          flex-shrink: 0;
+        }
 
-	&.collapsed {
-		width: 60px;
-		box-shadow: none;
+        span {
+          opacity: 1;
+          transition: opacity 0.3s ease;
+        }
+      }
+    }
+  }
 
-		ul {
-			li {
-				a {
-					span {
-						opacity: 0;
-						transition: opacity 0.3s ease;
-					}
-				}
-			}
-		}
-	}
+  &.collapsed {
+    width: 60px;
+    box-shadow: none;
+
+    ul {
+      li {
+        a {
+          span {
+            opacity: 0;
+            transition: opacity 0.3s ease;
+          }
+        }
+      }
+    }
+  }
 }
-
