--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -14,6 +14,45 @@ main {
   margin-left: 70px;
   color: white;
 
+  &.artist {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    table {
+      background-color: #2d2e35;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 10px;
+
+      tr:nth-child(2n + 3) {
+        background-color: #3d3e46;
+        
+      }
+
+      td, th {
+        padding: 4px 7px;
+      }
+      
+      input {
+        background-color: #545457;
+        border: 1px solid #25252c;
+        padding: 4px 6px;
+        border-radius: 5px;
+        color: white;
+      }
+
+      button {
+        background-color: #38b695;
+        color: white;
+        border: none;
+        padding: 4px 6px;
+        border-radius: 3px;
+        cursor: pointer;
+      }
+    }
+  }
+
   &.media {
     form {
       display: flex;
