--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -42,6 +42,10 @@ main {
         color: white;
       }
 
+      .remove {
+        background: rgb(182, 67, 67);
+      }
+
       button {
         background-color: #38b695;
         color: white;
