--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -14,7 +14,7 @@ main {
   margin-left: 70px;
   color: white;
 
-  &.artist {
+  &.artist, &.venues {
     width: 100%;
     display: flex;
     justify-content: center;
