--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,6 +202,8 @@ main {
 		margin-top: 20px;
 		margin-bottom: 50px;
 		line-height: 1.5rem;
+		letter-spacing: 0.07rem;
+		font-size: 1.05rem;
 
 		li {
 			margin-left: 20px;
