--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,11 +48,19 @@ main {
 	}
 
 	.banner {
+		display: block;
+		margin: 30px 0;
+
 		img {
 			width: 100%;
 			border-radius: 40px;
 			box-shadow: rgba($color: #000000, $alpha: 0.25) 0 0 20px 5px;
-			margin: 30px 0;
+		}
+
+		transition: 0.4s transform;
+
+		&:hover {
+			transform: scale(1.02);
 		}
 	}
 
