--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -243,6 +243,53 @@ main {
 						margin-left: 20px;
 					}
 				}
+
+				#tickets {
+					.ticket {
+						display: flex;
+						align-items: center;
+						padding: 15px 20px;
+						margin: 10px 0;
+						border-radius: 10px;
+						background-color: $secondary-50;
+
+						h2 {
+							flex: 1;
+						}
+						
+						div {
+							display: flex;
+							justify-content: flex-end;
+							align-items: center;
+							flex-direction: row;
+							float: right;
+
+							h3 {
+								margin: 0 50px;
+								font-size: 1.3rem;
+							}
+
+							.minus, .add {
+								background-color: $primary;
+								width: 35px;
+								height: 35px;
+								display: flex;
+								justify-content: center;
+								align-items: center;
+								font-weight: bold;
+								font-size: 1.3rem;
+								margin: 0 15px;
+								border-radius: 5px;
+								cursor: pointer;
+								user-select: none;
+							}
+
+							.num {
+								font-size: 1.3rem;
+							}
+						}
+					}
+				}
 			}
 
 			.col2 {
