--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -282,6 +282,7 @@ main {
 								border-radius: 5px;
 								cursor: pointer;
 								user-select: none;
+								border: none;
 							}
 
 							.num {
