--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -343,7 +343,7 @@ main {
 						outline: 3px solid $secondary-50;
 					}
 
-					.seat-selector {
+					#seat-selector {
             display: flex;
             flex-wrap: wrap;
             gap: 8px;
