add option to select seats

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -292,7 +292,7 @@ main {
 					}
 				}
 
-				.selected {
+				.select-panel {
 					background-color: $secondary-50;
 					border-radius: 10px;
 					padding: 25px 20px;
