--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-// Kolory
+// Colors
 $text: #0f0e0a;
 $background: #f9f9f6;
 $primary: #fed006;
@@ -65,5 +65,5 @@ $accent-800: #294224;
 $accent-900: #142112;
 $accent-950: #0a1009;
 
-// Czciąki
+// Fonts
 $mainFont: Arial, Helvetica, sans-serif;
