--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -67,3 +67,10 @@ $accent-950: #0a1009;
 
 // Fonts
 $mainFont: Arial, Helvetica, sans-serif;
+
+// Other
+$seat-color: #66a75a;
+$seat-occupied: #777453;
+
+$table-row-1: #d9d9d9;
+$table-row-2: #cdcdcd;
