--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -206,6 +206,14 @@ main {
 		}
 	}
 
+	&#final {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 10vh;
+		margin-bottom: 20vh;
+	}
+
 	&#buy {
 		.he {
 			font-size: 2rem;
