--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -619,15 +619,28 @@ main {
 			display: grid;
 			grid-template-columns: 45vw auto;
 
+			@media screen and (max-width: $phone) {
+				display: block;
+			}
+
 			img {
 				width: 100%;
 				border-radius: 40px;
+
+				@media screen and (max-width: $phone) {
+					border-radius: 20px;
+					margin-bottom: 10px;
+				}
 			}
 
 			div {
 				margin-left: 20px;
 				display: flex;
 				flex-direction: column;
+				
+				@media screen and (max-width: $phone) {
+					margin-left: 0;
+				}
 				
 				h1 {
 					font-size: 2.5rem;
@@ -673,6 +686,10 @@ main {
 						padding: 10px 80px;
 						border-radius: 10px;
 						font-size: 1.4rem;
+
+						@media screen and (max-width: $phone) {
+							margin-bottom: 20px;
+						}
 					}
 				}
 			}
